--- a/html/userinterface.html
+++ b/html/userinterface.html
@@ -10,7 +10,6 @@
         <div class="m24">
                 In a 3 panel structure, the left column is populated with filtration toggles while the right panel is populated with category-links, and the bottom panel is dedicated to rendering query results and potentially the rare case of a gallery-view which shows additional information for a chosen record.
         </div>
-         
 
         <div class="orbitron">
                 2 Panel Structure
@@ -25,7 +24,7 @@
 
 <div class="m24">
         <p>
-                The library has two themes, <em>Shadows</em> and <em>Lights</em>, being dark and light. You can alternate between these themes in the config page of the site, or by using the shortcuts <b>ctrl/</b> or <b>ctrl*</b>. The theme properties are controlled by css variables. Each theme has the same number of properties with the same variable names.
+                The library has two themes, <em>Shadows</em> and <em>Lights</em>, being dark and light. You can alternate between these themes in the config page of the site, or by using the shortcuts <b>ctrl /</b> or <b>ctrl *</b>. The theme properties are controlled by css variables. Each theme has the same number of properties with the same variable names.
         </p>
         <div class="orbitron">
                 Shadows
@@ -39,4 +38,9 @@
         <div class="m24">
                 Lights is somewhat an inverse of shadows theme. It is the light theme of the site. The background is the inverse of the grayscale space background, which makes it resemble white marble. The space aesthetic loses its coherency in this theme. The panels are tinted with creamy orange to represent brightness and warmth.
         </div>
+</div>
+<div class="orbitron">Max Content Width</div>
+
+<div class="m24">
+        The user can control how wide the site is to a certain extent in five pixel values: 1024, 1152, 1280, 1600, and 1920. This can be done in the config page of the site, or by using the shortcuts <b>ctrl 1-5</b>. While viewing is mostly comfortable in lower width, some implementations may be more comfortable in a particular one in a matter of taste. The music theory application is especially most comfortable in maximum width value of 1920, due to the musical instruments occupying a lot of horizontal space.
 </div>
