--- a/html/userinterface.html
+++ b/html/userinterface.html
@@ -8,14 +8,14 @@
                 3 Panel Structure
         </div>
         <div class="m24">
-                In a 3 panel structure, the left column is populated with filtration toggles while the right panel is populated with category-links, and the bottom panel is dedicated to rendering query results and potentially the rare case of a gallery-view which shows additional information for a chosen record.
+                In a 3 panel structure, the left column is populated with filtration toggles while the right panel is populated with category-links, and the bottom panel renders query results and potentially the rare case of a gallery-view which shows additional information for a chosen record.
         </div>
 
         <div class="orbitron">
                 2 Panel Structure
         </div>
         <div class="m24">
-               <p> In a 2 panel structure, the bottom 3rd panel is omitted and only the top two panels are rendered. Mediawiki implementations are like this because the left column is dedicated to <em>table of contents</em> navigation with the right panel being where page and category results are rendered,  since Mediawiki does not use traditional category links.</p>
+               <p> In a 2 panel structure, the bottom 3rd panel is omitted and only the top two panels are rendered. Mediawiki implementations are like this because the left column renders the <em>table of contents</em> navigation, while the right panel renders page and category results.</p>
                 
                 <p>2 panel structure for unique implementations are fundamentally the same. If all filters and category-links fit into the left column, the right panel can then be used for results instead of category-links.</p>
         </div>
