--- a/html/summary.html
+++ b/html/summary.html
@@ -1,6 +1,16 @@
 <div class="orbitron">About the Library.</div>
 <div class="m24">
-       <p> The Internet Public Library is a free, web-based research and reference environnment which displays information from web libraries and datasets. It can be used for discovery, learning, or going to a certain era of something. Artists who are looking for visual references can benefit from the meta-data, which provides context and sources to objects and stories. These datasets come from a range of sources including public APIs, cultural institutions, and community-maintained wikis. The system ingests heterogeneous data, organizes it, and renders it through a single page application. </p>
-       <p>Each dataset or in-house application is its own engine. Any applicable filters and navigations are bespoke to each implementation while still having overall user-interface similiarity across the site, letting heterogenous data in abundance and variance become accessible with familiarity. </p>
-       <p> Whether the data is open or gray-area, is updating or is a static archive, keeping data on the library is a hope for digital media preservation. Respectfully caring for cultural history, formatting it for viewing that is most immediate &amp; comfortable, and having it available for anyone to access is the goal of the library.</p>
+       <p> The Internet Public Library is a free, web-based research and reference environnment which displays information from web libraries and datasets through a science-fiction inspired interface. It can be used for discovery, learning, or visiting to a certain era of something. Whether an artist is looking for visual references or whether someone is curious about what a printing of something looked like in the 70's, one can benefit from the meta-data of records, which provides context and sources to objects and stories being viewed. Visual reference with data rather than without makes a great difference in the potential for a richer learning experience that would otherwise not be there if one were to browse for images in a content aggregation site where original data and sources are not cited.</p>
+       <p>Datasets come from a range of sources including public APIs, cultural institutions, and community-maintained wikis. The system ingests heterogeneous data, organizes it, and renders it through a single page application. Each dataset or in-house application is its own engine. Any applicable filters and navigations are unique to each implementation while still having overall user-interface similiarity across the site, letting heterogenous data in abundance and variance become accessible with familiarity. Scouting for new dataset implementations happens regularly during development. There are no restrictions on subject matter.</p>
+       <p>Whether the data is open or gray-area, is updating or is a static archive, keeping data live on the library is a hope for digital media preservation. We will lose more of our history if at least some of us do not act now. Computer graphics of the 90's could have been an era of documented aesthetics, but is instead ephemerally lost because we simply did not consider preservation.</p>
+       
+        <p>In finality, the library's handling of data is responsible for:</p>
+        
+        <ul>
+                <li>Respectfully caring for cultural history through digital stewardship. </li>
+                <li>Formatting information for viewing that is most data-immediate and comfortable.</li>
+                <li>Make each dataset or in-house application have greater potential as a resource for learning under any use case.</li>
+                <li>Updating the library's collection over time with new datasets.</li>
+                <li>Having everything available for anyone to access so that the power of knowledge is shared at scale.</li>
+        </ul>
 </div>
