--- a/html/ingestion.html
+++ b/html/ingestion.html
@@ -15,6 +15,10 @@
                 </ul>
         </p>
 </div>
+<div class="orbitron">Ingestion Failure</div>
+<div class="m24">
+        Even if a dataset is cleared for implementation during the curation process, the ingestion process for said dataset may be too taxing of a procedure. An example of a dataset likely to fail during ingestion would be a Mediawiki dataset which relies on too many Mediawiki extensions, or uses extensions which conflict with the custom-parser which determines the final html output of page data.
+</div>
 <div class="orbitron">Synchronization</div>
 <div class="m24">
         <p>
