--- a/index.html
+++ b/index.html
@@ -50,12 +50,19 @@
                                 <div class="flexrow"><a href="javascript:void(0)" class="nounderline" data="architecture">Architecture</a></div>
                                 <div class="flexrow"><a href="javascript:void(0)" class="nounderline" data="ingestion">Ingestion / Synchronization</a></div>
                                 <div class="flexrow"><a href="javascript:void(0)" class="nounderline" data="userinterface">User-Interface</a></div>
+                                <div class="flexrow"><a href="javascript:void(0)" class="nounderline" data="technologies">Technologies</a></div>
+                        </div>
+                        
+                        <div class="orbitron">Sustenance</div>
+                        <div class="flexcolumn" style="margin:8px;">
+                                <div class="flexrow"><a href="javascript:void(0)" class="nounderline" data="resources">Resources</a></div>
                         </div>
 
                         <div class="orbitron">Background</div>
                         <div class="flexcolumn" style="margin:8px;">
                                 <a href="javascript:void(0)" class="nounderline" data="creator">Creator</a>
                         </div>
+                        
                 </div>
                 <div class="flexcolumn table-scroll scrollbar" id="contentdata" style="flex:1;  padding:8px;">
                         Welcome to the documentation of Internet Public Library. Use the Table of Contents to find your way.
