--- a/html/ingestion.html
+++ b/html/ingestion.html
@@ -7,13 +7,12 @@
                         <li>Run a php script which inserts each record from the JSON files into the database.</li>
                         <li>Export filter/category data into a JSON cache file for the front-end to read on page-load and parse as html.</li>
                 </ul>
-        <p>
-                Mediawiki datasets use the following process for ingestion:
+        <p> Mediawiki datasets use the following process for ingestion:</p>
                 <ul>
                         <li>A data dump is requested directly from Fandom if one is too old or has never been created.</li>
                         <li>The data dump is inserted into the database using the designated Mediawiki maintenance script.</li>
                 </ul>
-        </p>
+        
 </div>
 <div class="orbitron">Ingestion Failure</div>
 <div class="m24">
