--- a/html/technologies.html
+++ b/html/technologies.html
@@ -6,8 +6,8 @@ This is a list of all the technologies and code that make the library run.
                 <th>Purpose</th>
         </tr>
         <tr>
-                <td class="tdr"><a href="https://www.w3schools.com/">w3</a>, Javascript, MySQL, PHP.</td>
-                <td class="tdl">Process and Display data.</td>
+                <td class="tdr"><a href="https://www.w3schools.com/">w3</a></td>
+                <td class="tdl">HTML, CSS, Javascript, MySQL, PHP. Process and display data.</td>
         </tr>
         <tr>
                 <td class="tdr"><a href="https://jquery.com/">jQuery</a></td>
