--- a/html/technologies.html
+++ b/html/technologies.html
@@ -1,4 +1,4 @@
-This is a list of all the technologies and code that make the library run.
+<p>This is a list of all the technologies and code that make the library run.</p>
 
 <table class="generaltable no-scale">
         <tr>
@@ -14,8 +14,28 @@ This is a list of all the technologies and code that make the library run.
                 <td class="tdl">Document traversal.</td>
         </tr>
         <tr>
-                <td class="tdr"><a href=""></a></td>
-                <td class="tdl"></td>
+                <td class="tdr"><a href="https://developer.mozilla.org/en-US/docs/Web/API/Web_Audio_API">Web Audio API</a></td>
+                <td class="tdl">For audio playback with timing precision.</td>
+        </tr>
+        <tr>
+                <td class="tdr"><a href="https://developer.mozilla.org/en-US/docs/Web/API/IndexedDB_API">IndexedDB API</a></td>
+                <td class="tdl">Running a local database for user-cache.</td>
+        </tr>
+        <tr>
+                <td class="tdr"><a href="https://developer.mozilla.org/en-US/docs/Web/API/Window/localStorage">localStorage</a></td>
+                <td class="tdl">User-interface cursor memory and other state management.</td>
+        </tr>
+        <tr>
+                <td class="tdr"><a href="https://fancyapps.com/fancybox/">Fancybox</a></td>
+                <td class="tdl">Lightbox image gallery viewer.</td>
+        </tr>
+        <tr>
+                <td class="tdr"><a href="https://openseadragon.github.io/">OpenSeadragon</a></td>
+                <td class="tdl">Tile-zooming system for large images.</td>
+        </tr>
+        <tr>
+                <td class="tdr"><a href="https://github.com/tonaljs/tonal">tonal</a></td>
+                <td class="tdl">Music theory library.</td>
         </tr>
         <!--
         <tr>
