--- a/html/technologies.html
+++ b/html/technologies.html
@@ -15,7 +15,7 @@
         </tr>
         <tr>
                 <td class="tdr"><a href="https://developer.mozilla.org/en-US/docs/Web/API/Web_Audio_API">Web Audio API</a></td>
-                <td class="tdl">For audio playback with timing precision.</td>
+                <td class="tdl">Process web audio with timing precision and playback details.</td>
         </tr>
         <tr>
                 <td class="tdr"><a href="https://developer.mozilla.org/en-US/docs/Web/API/IndexedDB_API">IndexedDB API</a></td>
@@ -35,7 +35,15 @@
         </tr>
         <tr>
                 <td class="tdr"><a href="https://github.com/tonaljs/tonal">tonal</a></td>
-                <td class="tdl">Music theory library.</td>
+                <td class="tdl">Music theory library, integrated into the Music Theory application.</td>
+        </tr>
+        <tr>
+                <td class="tdr"><a href="https://github.com/composer/composer">Composer</a></td>
+                <td class="tdl">PHP dependency manager.</td>
+        </tr>
+        <tr>
+                <td class="tdr"><a href="https://www.mediawiki.org/wiki/MediaWiki">Mediawiki</a></td>
+                <td class="tdl">Manages all states and queries for Mediawiki datasets.</td>
         </tr>
         <!--
         <tr>
