--- a/html/technologies.html
+++ b/html/technologies.html
@@ -45,6 +45,18 @@
                 <td class="tdr"><a href="https://www.mediawiki.org/wiki/MediaWiki">Mediawiki</a></td>
                 <td class="tdl">Manages all states and queries for Mediawiki datasets.</td>
         </tr>
+        <tr>
+                <td class="tdr"><a href="https://github.com/guzzle/guzzle">guzzle</a></td>
+                <td class="tdl">Streaming Nasa dataset synchronization.</td>
+        </tr>
+        <tr>
+                <td class="tdr"><a href="https://dotenvx.com/docs/env-file">.env</a></td>
+                <td class="tdl">Separating secrets from code.</td>
+        </tr>
+        <tr>
+                <td class="tdr"><a href="https://github.com/">Git</a></td>
+                <td class="tdl">Source control.</td>
+        </tr>
         <!--
         <tr>
                 <td class="tdr"><a href=""></a></td>
