--- a/html/technologies.html
+++ b/html/technologies.html
@@ -1,4 +1,4 @@
-<p>This is a list of all the technologies and code that make the library run.</p>
+<p>This is a list of the technologies and code that make all parts of the library run.</p>
 
 <table class="generaltable no-scale">
         <tr>
