--- a/html/implementationconsiderations.html
+++ b/html/implementationconsiderations.html
@@ -4,4 +4,7 @@
         <p>
                 An application type that would help make topics-in-need more visible is an article base. It would serve human written &amp; composed articles of any well researched topics. Navigation starts from an organized index page, similar to how other datasets generally present themselves. The bespoke nature of a human written article allows for the shaping of presented information that is beyond what ordered records are able to accomplish on their own. A dataset like this would require a content management system on the front-end with a new database on server-side. Data structures are up in the air as of yet, which is an exciting part of development. It can be anything, static html or ordered JSON data that is parsed on page load. The premise behind its presentation is that it is not to be contextually aligned with blog posting. That usually involves making an author the speaker of the content, but any article from the library's article base is meant to be more like a detailed record of a museum topic with no author-ownership, which is more in line with what the library serves.
         </p>
+        <p>
+                An implementation such as an article base would be green-lighted when progress for institutional API's have settled. The goal would be to fill in cultural and historical gaps, topics that are absent from all accumulated datasets.
+        </p>
 </div>
